--- a/springboot-social/src/main/resources/application.properties
+++ b/springboot-social/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=5000
 #database properties
 spring.datasource.url=jdbc:mysql://localhost:3306/social?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=adityakundu
+spring.datasource.password=Pushkar1536@
 
 # mysql hibernate configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
